--- a/server/public/index.html
+++ b/server/public/index.html
@@ -8,6 +8,7 @@
   <link rel="stylesheet" href="/reset.css">
   <link rel="stylesheet" href="/layout.css">
   <link rel="stylesheet" href="/styles.css">
+  <link rel="stylesheet" href="https://use.typekit.net/gxb0ssa.css">
 </head>
 <body>
   <div id="root"></div>
