--- a/server/public/index.html
+++ b/server/public/index.html
@@ -3,6 +3,9 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta prefix="og: http://ogp.me/ns#" property="og:title" content="Eventinerary">
+  <meta prefix="og: http://ogp.me/ns#" property="og:description" content="A full stack JavaScript web application for event-goers who want to find events and create itineraries for those events.">
+  <meta prefix="og: http://ogp.me/ns#" property="og:image" content="https://eventinerary.herokuapp.com/images/concert.jpg">
   <title>Eventinerary</title>
   <link rel="stylesheet" href="https://use.typekit.net/gxb0ssa.css">
   <link rel="stylesheet" crossorigin="anonymous"
